5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1674_1105.log
== SUBMITION (2019-04-30 10:26:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Qual o brasao? ",b)
print("Entrada: ")
if(b=="lobo"):
	print("Casa: Stark")
elif(b=="leao"):
	print("Casa: Lannister" )
elif(b=="veado"):
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Casa: Targaryen")
elif(b=="rosa"):
	print("Casa: Tyrell")
elif(b=="sol"):
	print("Casa: Martell")
elif(b=="lula"):
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Casa: Bolton")
elif(b=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.193625
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1105/main.py", line 3, in <module>
    b = input("Qual o brasao? ",b)
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:26:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Qual o brasao? ")
print("Entrada: ",b)
if(b=="lobo"):
	print("Casa: Stark")
elif(b=="leao"):
	print("Casa: Lannister" )
elif(b=="veado"):
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Casa: Targaryen")
elif(b=="rosa"):
	print("Casa: Tyrell")
elif(b=="sol"):
	print("Casa: Martell")
elif(b=="lula"):
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Casa: Bolton")
elif(b=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.179569
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
